--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
     "@babel/preset-react": "^7.0.0",
     "@rails/webpacker": "^4.0.2",
     "antd": "^3.16.3",
+    "axios": "^0.18.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
-    "react_ujs": "^2.5.0"
+    "react_ujs": "^2.5.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "universal-cookie": "^3.1.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.3.1"
